@@ -1,5 +1,10 @@
 2001-12-30  Yoshinori K. Okuji  <okuji@gnu.org>
 
+	* util/grub-install.in: Set GRUB_PREFIX and BOOTDIR to "/grub"
+	and "${rootdir}" respectively in NetBSD.
+	
+2001-12-30  Yoshinori K. Okuji  <okuji@gnu.org>
+
 	* stage2/builtins.c (builtin_geometry): Add extra space
 	characters into the long description.
 	(builtin_kernel): Likewise.
